2010-10-22  Ramon Novoa  <rnovoa@artica.es>

	* operation/agentes/networkmap.php: Use a filtered variable instead of
	  the layout name to compose temporary file names.

2010-10-20  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.list.php: Fixed a clone function 
	of jquery for incompatibility with IE browser for bug 3090389 
	Merged from trunk

2010-10-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/massive_edit_modules.php: Fixed typo in jquery
	for iexplorer compatibility merged from trunk 3090389

2010-10-15  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Fixed a not defined variable config
	for bug 3087429

2010-10-14  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* godmode/agentes/module_manager_editor.php: fixed the ajax with the new
	safe_ouput function.
	
2010-10-13  Sancho Lerena <slerena@artica.es>

	* operation/agentes/networkmap.php: Fixed problem in unsafe parameters.

	* operation/agentes/networkmap.php: Applied security fixes to network
	grapviz maps (safe_url call to parameters first). Ported from trunk.

2010-10-11  Ramon Novoa  <rnovoa@artica.es>

	* include/fgraph.php: Search history DB if necessary for module charts.

2010-10-11 Sancho Lerena <slerena@artica.es>

	* include/functions_reporting.php: Fixed problem with SQL custom reports
	because the SQL html encoding. Added a SQL check for secure user-input
	SQL code.

	* include/functions.php: Added check_sql() function to do a basic 
	safety check on SQL code.

2010-10-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_io.php: Fixed problem with SQL injection, with the 
	same code in trunk version.

2010-10-08 Sancho Lerena <slerena@artica.es>

	* include/functions_io.php: Fixed problem with SQL injection
	when using blank/tab characters.

2010-10-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/agentes/estado_agente.php, ver_agente.php: Fixed a problem
	with input parameters.
